@@ -1,4 +1,14 @@
-### Handling No product found exception (HEAD -> main)
+### Use upper case for xxyy (HEAD -> main)
+>Mon, 24 Apr 2023 15:34:36 +0200
+
+>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
+
+>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
+
+
+
+
+### Handling No product found exception (tag: 1.0.1, origin/main)
 >Thu, 20 Apr 2023 22:22:37 +0200
 
 >Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
@@ -8,7 +18,7 @@
 
 
 
-### Update README (tag: 1.0.0, origin/main)
+### Update README (tag: 1.0.0)
 >Fri, 14 Apr 2023 22:36:08 +0200
 
 >Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
